tests/baselines/reference/continueNotInIterationStatement2.errors.txt
tests/cases/compiler/continueNotInIterationStatement2.ts(3,5): error TS1107: Jump target cannot cross function boundary.


==== tests/cases/compiler/continueNotInIterationStatement2.ts (1 errors) ====
    while (true) {
      function f() {
        continue;
        ~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
      }
    }